--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@
     --footer-text-color: #B3EFB2;
     --footer-link-color: #7A9E7E;
     --footer-link-hover-color: #4eb24b;
+    --hovering-color: #b34dd4;
 }
 
 body {
@@ -127,8 +128,8 @@ ul li:last-child {
 }
 
 .btn-primary:hover, .btn-primary:focus {
-    background-color: var(--week-checked-color);
-    border-color: var(--week-checked-color);
+    background-color: var(--hovering-color);
+    border-color: var(--hovering-color);
 }
 
 /* Comment Section Styles */
@@ -342,8 +343,8 @@ h3 {
 }
 
 .btn-secondary:hover, .btn-secondary:focus {
-    background-color: var(--week-checked-color);
-    border-color: var(--week-checked-color);
+    background-color: var(--hovering-color);
+    border-color: var(--hovering-color);
 }
 
 /* Media Queries for Detailed Page */
@@ -421,8 +422,8 @@ h3 {
 
 .admin-dashboard .btn-primary:hover,
 .admin-dashboard .btn-primary:focus {
-    background-color: var(--week-checked-color); /* Use week checked color for hover/focus */
-    border-color: var(--week-checked-color);
+    background-color: var(--hovering-color); /* Use week checked color for hover/focus */
+    border-color: var(--hovering-color);
 }
 
 .admin-dashboard .btn-danger {
@@ -433,8 +434,8 @@ h3 {
 
 .admin-dashboard .btn-danger:hover,
 .admin-dashboard .btn-danger:focus {
-    background-color: var(--week-checked-color); /* Use week checked color for hover/focus */
-    border-color: var(--week-checked-color);
+    background-color: var(--hovering-color); /* Use week checked color for hover/focus */
+    border-color: var(--hovering-color);
 }
 
 /* Responsive adjustments */
@@ -474,7 +475,7 @@ h3 {
 
 .navbar-brand:hover,
 .navbar-brand:focus {
-    color: var(--navbar-active-color);
+    color: var(--hovering-color);
 }
 
 .navbar-nav .nav-link {
@@ -486,7 +487,7 @@ h3 {
 .navbar-nav .nav-link:focus,
 .navbar-nav .nav-link.active {
     text-decoration: underline;
-    color: var(--navbar-active-color);
+    color: var(--hovering-colorr);
 }
 
 .navbar-toggler {
@@ -505,7 +506,7 @@ h3 {
 
 .navbar .dropdown-menu .dropdown-item:hover,
 .navbar .dropdown-menu .dropdown-item:focus {
-    background-color: var(--navbar-active-color);
+    background-color: var(--hovering-color);
     color: var(--navbar-bg-color);
 }
 
